#730: Exception is now also attached to action if the action produced the exception